feat: Phase 1-4 구현 + 통합 테스트 + 문서화
## Backend
- Transactional Outbox Pattern (OutboxEvent, OutboxPollingPublisher)
- MySQL Spatial Index + R-Tree 기반 근처 검색 (ParkingSpaceRepository)
- Resilience4j CircuitBreaker + Bulkhead 설정
- Redis GEO 캐시 레이어 (GeoCacheService)
- Pessimistic Lock 동시성 제어 (BookingService)
- SecurityConfig: ROLE_USER 기반 인가 설정

## Test
- 통합 테스트: ParkingMateIntegrationTest (8/8 PASS)
- 성능 측정: BookingConnectionTimingTest (Before/After 비교)
- application-mysqltest.properties 추가

## Frontend
- 중앙 axios 인스턴스 (src/api/axios.js)
- Vite proxy 설정

## Docs (MD/)
- PARKINGMATE_STRATEGY_V2_0304.md
- plan_0317.md
- BEFORE_MEASUREMENT_REPORT.md
- AFTER_MEASUREMENT_REPORT.md
- INTEGRATION_TEST_REPORT.md
- .gitignore: .claude/ 추가